@@ -1,3 +1,8 @@
+2010-04-28  Theodore Kilgore <kilgota@auburn.edu>
+	* README.jl2005c: minor cleanup.
+	* library.c: Sakar 88601 Nickelodeon iCarly camera added.
+
+
 2010-12-26  Marcus Meissner <marcus@jet.franken.de>
 
 	* jl2005bcd_decompress.c: Dynamically allocate the out and
